# ImmuneAgent

./: .env  .gitignore  AUTHENTICATION.md  Makefile  README.md  README_CN.md  package-lock.json
agent/: .env  AGENTS.md  README.md  __init__.py  alembic.ini  main.py  main_graph.py  main_graph_with_sandbox.py  prompts.py  pyproject.toml  run_tests.py  state-new.py  state.py  test_workflow_with_mcp.py  verify_setup.py
agent/alembic/: env.py
agent/alembic/versions/: 7d771b541320_init.py
agent/coding_agent/: __init__.py  config.py  execution_tracker.py  glm_proxy.py  integration.py  iterative_executor.py  iterative_types.py  local_sandbox.py  opencode_executor.py  opencode_server.py  prompts.py  tasks_md_generator.py  test_basic.py
agent/common/: constants.py  factory.py  prompts.py  runner.py  vectorstore.py
agent/common/interrupts/: __init__.py
agent/common/util/: mcp_utils.py  retrieval_utils.py  word_exporter.py
agent/config/: API_KEYS_README.md  api_keys.py  config.py  imgt_vgene_cdr_reference.json  mcp_servers.json  mcp_servers_opencode.json  mcp_tools.json  model_providers.json  service_list.json  tools_params_table.json
agent/core/: __init__.py  react_state.py  tool_interface.py
agent/examples/: iterative_executor_demo.py
agent/mcp_servers/: __init__.py  common_tools_server.py
agent/mcp_tools/: skill_schema.md
agent/mcp_tools/bcell/: skill.yaml
agent/mcp_tools/igblast/: skill.yaml
agent/mcp_tools/metabcr/: skill.yaml
agent/mcp_tools/nettcr/: best_practices.md  skill.yaml
agent/mcp_tools/tcell/: best_practices.md  examples.md  skill.yaml
agent/nodes/: __init__.py  generate_task_node.py  hitl_node.py
agent/nodes/subagents/: __init__.py
agent/schema/: common_schemas.py
agent/tests/: conftest.py  csv_questions_const.py  csv_questions_data.json  test_agent.py  test_agent_interactive.py  test_codeact_subgraph.py  test_codeact_trajectory.py  test_executor_full_workflow_interactive.py  test_executor_optimized.py  test_executor_parameter_inference.py  test_executor_parameter_inference_with_execution.py  test_executor_subgraph.py  test_full_pipeline_end_to_end.py  test_full_workflow_detailed.py  test_general_qa_subgraph.py  test_gengeral_qa_subgraph.py  test_immunity_and_decomposition_comprehensive.py  test_immunity_subgraph.py  test_iterative_main_graph.py  test_logger.py  test_main_graph_codeact_todo.py  test_main_graph_q13.py  test_mcp_tool_integration.py  test_supervisor_subgraph.py  test_task_decomposition_subgraph.py  test_trajectory_system.py  xmasters_test_config.json
agent/tools/: __init__.py  _output.py  biomedical.py  clinical.py  docx_parser.py  literature.py  memory.py  reference.py  search.py
agent/usecases/: _debug.py
agent/usecases/antibody/: antibody_config.py  start_antibody_agent_executor.py  start_antibody_agent_plan.py  start_antibody_agent_retrieval.py
agent/usecases/cell/: cell_config.py  gradio_interface.py  gradio_workflow_manager.py  start_cell_agent_all_figures.py  start_cell_agent_figure2.py  start_cell_agent_figure3.py  start_cell_agent_figure4.py  start_cell_agent_figure5.py  start_cell_agent_metabcr.py  start_cell_agent_planning.py  start_cell_agent_retrieval.py  start_cell_agent_strategy.py  start_gradio_app.py  stat_cell_agent_execute.py
agent/usecases/deepagents/: graph.py  prompts.py  sub_agent.py  test.py  tools.py
agent/usecases/execute/: interrupts.py  prompts.py
agent/usecases/immunity/: __init__.py  gradio_interface.py  real_workflow_ui.py  start_improved_workflow.py
agent/usecases/immunology/: README.md  __init__.py  code_tree.md  constants.py  deploy_qdrant_papers.py  download_papers_locally.py  enhanced_immune_agent.py  example_usage.py  immunology_config.py  load_local_papers_to_qdrant.py  qdrant_deployment.py  (+7 more)
agent/utils/: __init__.py  agent_helper.py  chain_of_thought_prompt.py  code_cache_manager.py  codeact_executor.py  console_output_filter.py  console_output_redirector.py  db_manager.py  execution_logger.py  file_utils.py  hitl_interaction.py  json_extractor.py  llm_factory.py  llm_streaming_wrapper.py  llm_thinking_capture.py  mcp_helper.py  mem0_manager.py  opencode_client.py  opencode_executor.py  opensandbox_executor.py  opensandbox_helper.py  progress_context.py  progress_reporter.py  prompts.py  sandbox_handlers.py  sandbox_paths.py  sse_callback_handler.py  sse_handler.py  stream_thinking_capture.py  subgraph_sandbox_executor.py  subgraph_sandbox_usage_example.py  thinking_prompt_wrapper.py  unified_search.py  zhipu_adapter.py  zhipu_adapter_example.py
agent/web/: auth.py  context.py  settings.py  spa_middleware.py
foundry/: .gitignore  README.md  deepspeed_config.json  finetune.py  pyproject.toml
kb/: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
(+869 files in other folders)
