[project]
name = "bio-agent"
version = "0.1.0"
description = "生物信息学智能Agent系统"
requires-python = ">=3.13,<3.14"
keywords = ["agent", "llm", "bioinformatics", "langgraph"]

# 核心依赖
dependencies = [
    "langgraph>=1.0.0",
    "langchain-core>=1.0.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.0.1",
    "langchain-openai>=1.0.0",
]

# 可选依赖
[project.optional-dependencies]
# 开发依赖（测试工具）
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
