[project]
name = "bio-agent"
version = "0.1.0"
description = "生物信息学智能Agent系统"
requires-python = ">=3.12,<3.13"
keywords = ["agent", "llm", "bioinformatics", "langgraph"]

# 核心依赖
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=0.2.0",  # Deep research 模块需要 langchain.chat_models.init_chat_model (0.2.0+ 引入)
    "langchain-core>=1.0.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.0.1",
    "langchain-openai>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "tiktoken>=0.12.0",  # 指定更新版本以支持 Python 3.12 预编译 wheel
]

# 可选依赖
[project.optional-dependencies]
# 通义千问支持（DashScope）
dashscope = [
    "langchain-dashscope>=0.1.0",
]
# Qdrant 向量数据库检索支持
qdrant = [
    "langchain-qdrant>=0.1.0",
    "qdrant-client>=1.7.0",
    "langchain-ollama>=0.1.0",  # 用于本地嵌入模型（可选）
]
# Tavily API 网络搜索支持
tavily = [
    "tavily-python>=0.3.0",
]
# OpenSandbox 远程沙盒执行支持
opensandbox = [
    "opensandbox>=0.1.0",
    "opensandbox-code-interpreter>=0.1.0",
]
# 完整检索支持（包含所有检索方式）
retrieval = [
    "langchain-qdrant>=0.1.0",
    "qdrant-client>=1.7.0",
    "langchain-ollama>=0.1.0",
    "tavily-python>=0.3.0",
]
# 开发依赖（测试工具）
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
