[project]
name = "foundry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "datasets>=4.0.0",
    "deepspeed>=0.17.2",
    "peft>=0.16.0",
    "swanlab>=0.6.7",
    "transformers>=4.53.2",
    "trl>=0.19.1",
    "wandb>=0.21.0",
]
