[project]
name = "kb"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.56",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.2",
    "langchain-qdrant>=0.2.0",
    "pdfminer>=20191125",
    "pdfplumber>=0.11.6",
    "unstructured>=0.17.2",
]

[tool.uv]
package = true

[project.scripts]
kb = "kb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb"]